# restx-api-sample

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  docker-compose.yml  init_db_data.py  pyproject.toml  pytest.ini
crm/: Dockerfile  app.py  default_config.py  init_db_data.py  models.py  pyproject.toml
crm/api/: routes.py
crm/api/resources/: namespaces.py
crm/src/: app.py  default_config.py  exceptions.py  models.py
crm/src/api/: routes.py
crm/src/api/resources/: namespaces.py
crm/src/api/resources/customers/: controller.py  serializers.py  service.py
crm/src/api/resources/prospects/: controller.py  parsers.py  serializers.py  service.py
crm/src/api/resources/users/parsers/: user_login_parser.py
crm/tests/: conftest.py  test_app.py  test_products_endpoint.py
erp/: .env_sample  .gitignore  Dockerfile  app.py  default_config.py  docker-compose-jenkins.yml  exceptions.py  models.py  pyproject.toml  security_utils.py
erp/api/: routes.py
erp/api/resources/: namespaces.py
erp/api/resources/customers/: controller.py
erp/src/: app.py  default_config.py  exceptions.py  models.py  security_utils.py
erp/src/api/: routes.py
erp/src/api/resources/: namespaces.py
erp/src/api/resources/customers/: controller.py  parsers.py
erp/src/api/resources/products/: controller.py  parsers.py  serializers.py  service.py
erp/src/api/resources/users/: controller.py  service.py
erp/src/api/resources/users/marshallers/: users_serializers.py
erp/tests/: conftest.py  test_app.py
(+2 files in other folders)
